welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:5: error: reassignment to val
    c=Color.orange
     ^SlugSnail:8: error: reassignment to val
    	c=Color.pink
         ^SlugSnail:19: error: not found: value c
 	if (getCouleurSol()==c) {
                             ^